Fix assignment title line clamping not working on safari

--- a/timeweb/timewebapp/static/timewebapp/css/app.css
+++ b/timeweb/timewebapp/static/timewebapp/css/app.css
@@ -264,6 +264,8 @@ header.animate::after {
     position: relative;
     display: none;
     color: rgba(var(--c), var(--c), var(--c), var(--description-opacity));
+    z-index: 1; /* A new stacking context is apparantly needed for the line clamping to work
+    reference: https://stackoverflow.com/questions/16148007/which-css-properties-create-a-stacking-context */
     transform: translateY(-2px);
     min-width: var(--left-side-of-header-width);
     max-width: var(--left-side-of-header-width);
